--- a/addons/csi/openstack/snapshot-controller.yaml
+++ b/addons/csi/openstack/snapshot-controller.yaml
@@ -13,15 +13,15 @@
 # limitations under the License.
 
 # Sourced from:
-# - https://github.com/kubernetes-csi/external-snapshotter/blob/v6.2.2/deploy/kubernetes/snapshot-controller/rbac-snapshot-controller.yaml
-# - https://github.com/kubernetes-csi/external-snapshotter/blob/v6.2.2/deploy/kubernetes/snapshot-controller/setup-snapshot-controller.yaml
+# - https://github.com/kubernetes-csi/external-snapshotter/blob/v6.3.3/deploy/kubernetes/snapshot-controller/rbac-snapshot-controller.yaml
+# - https://github.com/kubernetes-csi/external-snapshotter/blob/v6.3.3/deploy/kubernetes/snapshot-controller/setup-snapshot-controller.yaml
 # Modifications:
 #   - template function to replace base registry
 #   - add seccomp profile
 
 {{ if .Cluster.Features.Has "externalCloudProvider" }}
 {{ if eq .Cluster.CloudProviderName "openstack" }}
-
+---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -83,9 +83,9 @@ metadata:
   name: snapshot-controller-leaderelection
   namespace: kube-system
 rules:
-  - apiGroups: ["coordination.k8s.io"]
-    resources: ["leases"]
-    verbs: ["get", "watch", "list", "delete", "update", "create"]
+- apiGroups: ["coordination.k8s.io"]
+  resources: ["leases"]
+  verbs: ["get", "watch", "list", "delete", "update", "create"]
 
 ---
 kind: RoleBinding
@@ -108,7 +108,7 @@ metadata:
   name: snapshot-controller
   namespace: kube-system
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: snapshot-controller
@@ -132,11 +132,13 @@ spec:
           type: RuntimeDefault
       containers:
         - name: snapshot-controller
-          image: '{{ Image "registry.k8s.io/sig-storage/snapshot-controller:v6.2.2" }}'
+          image: {{ Image "registry.k8s.io/sig-storage/snapshot-controller:v6.3.1" }}
           args:
             - "--v=5"
             - "--leader-election=true"
+            # Add a marker to the snapshot-controller manifests. This is needed to enable feature gates in CSI prow jobs.
+            # For example, in https://github.com/kubernetes-csi/csi-release-tools/pull/209, the snapshot-controller YAML is updated to add --prevent-volume-mode-conversion=true so that the feature can be enabled for certain e2e tests.
+            # end snapshot controller args
           imagePullPolicy: IfNotPresent
-
 {{ end }}
 {{ end }}
