--- a/addons/csi/openstack/snapshot-webhook.yaml
+++ b/addons/csi/openstack/snapshot-webhook.yaml
@@ -13,12 +13,14 @@
 # limitations under the License.
 
 # Sourced from:
-# - https://github.com/kubernetes-csi/external-snapshotter/blob/v6.2.2/deploy/kubernetes/webhook-example/webhook.yaml
+# - https://github.com/kubernetes-csi/external-snapshotter/blob/v6.3.3/deploy/kubernetes/webhook-example/webhook.yaml
+# - https://github.com/kubernetes-csi/external-snapshotter/blob/v6.3.3/deploy/kubernetes/webhook-example/rbac-snapshot-webhook.yaml
 # Modifications:
 #   - change namespace
 #   - template function to replace base registry
 #   - change webhook-certs secret name
 #   - add seccomp profile
+#   - change replica count to 1
 
 {{ if .Cluster.Features.Has "externalCloudProvider" }}
 {{ if eq .Cluster.CloudProviderName "openstack" }}
@@ -45,16 +47,20 @@ spec:
         seccompProfile:
           type: RuntimeDefault
       containers:
-        - name: snapshot-validation
-          image: '{{ Image "registry.k8s.io/sig-storage/snapshot-validation-webhook:v6.2.1" }}'
-          imagePullPolicy: IfNotPresent
-          args: ['--tls-cert-file=/etc/snapshot-validation-webhook/certs/cert.pem', '--tls-private-key-file=/etc/snapshot-validation-webhook/certs/key.pem']
-          ports:
-            - containerPort: 443
-          volumeMounts:
-            - name: snapshot-validation-webhook-certs
-              mountPath: /etc/snapshot-validation-webhook/certs
-              readOnly: true
+      - name: snapshot-validation
+        image: {{ Image "registry.k8s.io/sig-storage/snapshot-validation-webhook:v6.3.1" }}
+        imagePullPolicy: IfNotPresent
+        args:
+          - '--tls-cert-file=/etc/snapshot-validation-webhook/certs/cert.pem'
+          - '--tls-private-key-file=/etc/snapshot-validation-webhook/certs/key.pem'
+          # uncomment the following line to enable webhook for VolumeGroupSnapshot, VolumeGroupSnapshotContent and VolumeGroupSnapshotClass.
+          # - '--enable-volume-group-snapshot-webhook'
+        ports:
+        - containerPort: 443 # change the port as needed
+        volumeMounts:
+          - name: snapshot-validation-webhook-certs
+            mountPath: /etc/snapshot-validation-webhook/certs
+            readOnly: true
       volumes:
         - name: snapshot-validation-webhook-certs
           secret:
@@ -70,8 +76,8 @@ spec:
     app: snapshot-validation
   ports:
     - protocol: TCP
-      port: 443
-      targetPort: 443
+      port: 443 # Change if needed
+      targetPort: 443 # Change if the webserver image expects a different port
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -86,6 +92,9 @@ metadata:
 rules:
   - apiGroups: ["snapshot.storage.k8s.io"]
     resources: ["volumesnapshotclasses"]
+    verbs: ["get", "list", "watch"]
+  - apiGroups: ["groupsnapshot.storage.k8s.io"]
+    resources: ["volumegroupsnapshotclasses"]
     verbs: ["get", "list", "watch"]
 ---
 kind: ClusterRoleBinding
