--- a/addons/csi/vsphere/setup-snapshot-controller.yaml
+++ b/addons/csi/vsphere/setup-snapshot-controller.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 # Sourced from:
-# https://github.com/kubernetes-csi/external-snapshotter/blob/v6.2.2/deploy/kubernetes/snapshot-controller/setup-snapshot-controller.yaml
+# https://github.com/kubernetes-csi/external-snapshotter/blob/v6.3.3/deploy/kubernetes/snapshot-controller/setup-snapshot-controller.yaml
 #
 # Modifications:
 #   - change image domain to registry.k8s.io
@@ -22,16 +22,8 @@
 #   - add --kube-api-qps=100 argument
 #   - add --kube-api-burst=100 argument
 
-
-# The snapshot controller implements the control loop for CSI snapshot functionality.
-# It should be installed as part of the base Kubernetes distribution in an appropriate
-# namespace for components implementing base system functionality. For installing with
-# Vanilla Kubernetes, kube-system makes sense for the namespace.
-
 {{ if .Cluster.Features.Has "externalCloudProvider" }}
 {{ if eq .Cluster.CloudProviderName "vsphere" }}
-
----
 kind: Deployment
 apiVersion: apps/v1
 metadata:
@@ -62,12 +54,13 @@ spec:
           type: RuntimeDefault
       containers:
         - name: snapshot-controller
-          image: {{ Image "registry.k8s.io/sig-storage/snapshot-controller:v6.2.2" }}
+          image: {{ Image "registry.k8s.io/sig-storage/snapshot-controller:v6.3.1" }}
           args:
             - "--v=5"
             - "--leader-election=true"
-            - "--kube-api-qps=100"
-            - "--kube-api-burst=100"
+            # Add a marker to the snapshot-controller manifests. This is needed to enable feature gates in CSI prow jobs.
+            # For example, in https://github.com/kubernetes-csi/csi-release-tools/pull/209, the snapshot-controller YAML is updated to add --prevent-volume-mode-conversion=true so that the feature can be enabled for certain e2e tests.
+            # end snapshot controller args
           imagePullPolicy: IfNotPresent
 {{ end }}
 {{ end }}
