--- a/addons/Makefile
+++ b/addons/Makefile
@@ -65,6 +65,25 @@ aws-ebs-csi-driver:
 	cat csi/aws-ebs/_footer.txt >> $(OUTPUT_FILE)
 	./templatify-images.sh $(OUTPUT_FILE)
 
+.PHONY: cluster-autoscaler
+cluster-autoscaler: OUTPUT_FILE=cluster-autoscaler/cluster-autoscaler.yaml
+cluster-autoscaler:
+	helm repo add autoscaler https://kubernetes.github.io/autoscaler || true
+	helm repo update
+	mkdir -p cluster-autoscaler
+	cat cluster-autoscaler/_header.txt > $(OUTPUT_FILE)
+	helm --namespace kube-system template cluster-autoscaler autoscaler/cluster-autoscaler \
+	  --version 9.34.1 \
+	  --set 'cloudProvider=clusterapi' \
+	  --set 'autoDiscovery.clusterName=\{{ "{{ .Cluster.Name }}" }}' \
+	  --set 'extraEnv.CAPI_GROUP=cluster.k8s.io' \
+	  --set 'securityContext.seccompProfile.type=RuntimeDefault' \
+	  --set 'tolerations[0].effect=NoSchedule' \
+	  --set 'tolerations[0].key=node-role.kubernetes.io/master' \
+	  >> $(OUTPUT_FILE)
+	cat cluster-autoscaler/_footer.txt >> $(OUTPUT_FILE)
+	./templatify-images.sh $(OUTPUT_FILE)
+
 .PHONY: gcp-csi-driver
 gcp-csi-driver: OUTPUT_FILE=csi/gcp/driver.yaml
 gcp-csi-driver:
