store full role ARN for AWS clusters because the CCM requires valid ARNs now

--- a/codegen/permission-generator/defaultmapper.yml
+++ b/codegen/permission-generator/defaultmapper.yml
@@ -229,3 +229,8 @@ modules:
       ToString: null
       ToFloat64: null
       StringSlice: null
+
+  github.com/aws/aws-sdk-go-v2/aws/arn:
+    funcs:
+      Parse: null
+      IsARN: null
