--- a/addons/csi/openstack/network-policy.yaml
+++ b/addons/csi/openstack/network-policy.yaml
@@ -12,36 +12,22 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-default: aws-ebs azure-disk azure-file azure-snapshot-controller digitalocean gcp hetzner openstack
-
-.PHONY: aws-ebs
-aws-ebs:
-	make -C aws-ebs
-
-.PHONY: azure-disk
-azure-disk:
-	make -C azure-disk
-
-.PHONY: azure-file
-azure-file:
-	make -C azure-file
-
-.PHONY: azure-snapshot-controller
-azure-snapshot-controller:
-	make -C azure-snapshot-controller
-
-.PHONY: digitalocean
-digitalocean:
-	make -C digitalocean
-
-.PHONY: gcp
-gcp:
-	make -C gcp
-
-.PHONY: hetzner
-hetzner:
-	make -C hetzner
-
-.PHONY: openstack
-openstack:
-	make -C openstack
+{{ if eq .Cluster.CloudProviderName "openstack" }}
+{{ if .Cluster.Features.Has "kubeSystemNetworkPolicies" }}
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: csi-cinder-controllerplugin
+  namespace: kube-system
+spec:
+  podSelector:
+    matchLabels:
+      app: csi-cinder-controllerplugin
+  policyTypes:
+    - Egress
+  egress:
+    - to:
+        - ipBlock:
+            cidr: 0.0.0.0/0
+{{ end }}
+{{ end }}
