--- a/.prow/ccm-migrations.yaml
+++ b/.prow/ccm-migrations.yaml
@@ -13,6 +13,47 @@
 # limitations under the License.
 
 presubmits:
+  - name: pre-kubermatic-ccm-migration-gcp-e2e
+    run_if_changed: "(pkg/provider/cloud/gcp/|pkg/resources/cloudcontroller/gcp|pkg/test/e2e/ccm-migration/|.prow/ccm-migrations.yaml)"
+    decorate: true
+    clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
+    labels:
+      preset-gce: "true"
+      preset-docker-pull: "true"
+      preset-docker-push: "true"
+      preset-vault: "true"
+      preset-repo-ssh: "true"
+      preset-e2e-ssh: "true"
+      preset-kind-volume-mounts: "true"
+      preset-kubeconfig-ci: "true"
+      preset-goproxy: "true"
+    spec:
+      containers:
+        - image: quay.io/kubermatic/build:go-1.21-node-18-kind-0.20-9
+          env:
+            - name: KUBERMATIC_EDITION
+              value: ee
+            - name: PROVIDER
+              value: gcp
+            - name: VERSION_TO_TEST
+              value: '1.27'
+            - name: SERVICE_ACCOUNT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: e2e-ci
+                  key: serviceAccountSigningKey
+          command:
+            - ./hack/run-ccm-migration-e2e-test-in-kind.sh
+          # docker-in-docker needs privileged mode
+          securityContext:
+            privileged: true
+          resources:
+            requests:
+              memory: 4Gi
+              cpu: 3.5
+            limits:
+              memory: 6Gi
+
   - name: pre-kubermatic-ccm-migration-azure-e2e
     run_if_changed: "(addons/azure-cloud-node-manager/|pkg/provider/cloud/azure/|pkg/resources/cloudcontroller/|pkg/test/e2e/ccm-migration/|.prow/ccm-migrations.yaml)"
     decorate: true
