Example command to generate secrets now works on macOS by default
Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/charts/kubermatic.example.ce.yaml
+++ b/charts/kubermatic.example.ce.yaml
@@ -53,6 +53,6 @@ spec:
 
     # these need to be randomly generated. Those can be generated on the
     # shell using:
-    # cat /dev/urandom | tr -dc A-Za-z0-9 | head -c32
+    # cat /dev/urandom | base64 | tr -dc 'A-Za-z0-9' | head -c32
     issuerCookieKey: <a-random-key>
     serviceAccountKey: <another-random-key>
