Support for attaching multiple networks to a vApp
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
@@ -907,8 +907,13 @@ spec:
                           description: The name of organization to use.
                           type: string
                         ovdcNetwork:
-                          description: The name of organizational virtual data center network that will be associated with the VMs and vApp.
+                          description: 'The name of organizational virtual data center network that will be associated with the VMs and vApp. Deprecated: OVDCNetwork has been deprecated starting with KKP 2.25 and will be removed in KKP 2.27+. It is recommended to use OVDCNetworks instead.'
                           type: string
+                        ovdcNetworks:
+                          description: OVDCNetworks is the list of organizational virtual data center networks that will be attached to the vApp and can be consumed the VMs.
+                          items:
+                            type: string
+                          type: array
                         password:
                           description: The VMware Cloud Director user password.
                           type: string
@@ -923,7 +928,6 @@ spec:
                           type: string
                       required:
                         - csi
-                        - ovdcNetwork
                       type: object
                     vsphere:
                       description: VSphere defines the configuration data of the vSphere.
