--- a/pkg/test/e2e/cilium/testdata/test-app-def.yaml
+++ b/pkg/test/e2e/cilium/testdata/test-app-def.yaml
@@ -15,17 +15,16 @@
 apiVersion: apps.kubermatic.k8c.io/v1
 kind: ApplicationDefinition
 metadata:
-  name: cert-manager
+  name: nginx
 spec:
-  description: cert-manager is a Kubernetes addon to automate the management and issuance of TLS certificates from various issuing sources.
+  description: Ingress controller for Kubernetes using NGINX as a reverse proxy and load balancer.
   method: helm
   versions:
   - template:
       source:
         helm:
-          chartName: cert-manager
-          chartVersion: v1.12.3
-          url: https://charts.jetstack.io
-    version: v1.12.3
-  defaultValues:
-    installCRDs: true
+          chartName: ingress-nginx
+          chartVersion: 4.7.1
+          url: https://kubernetes.github.io/ingress-nginx
+    version: 1.8.1
+  defaultValues: {}
