update code gen
Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
@@ -455,6 +455,9 @@ spec:
                           description: Token is used to authenticate with the DigitalOcean API.
                           type: string
                       type: object
+                    edge:
+                      description: Edge defines the configuration data for an edge cluster.
+                      type: object
                     fake:
                       description: Fake is a dummy cloud provider that is only used for testing purposes. Do not try to actually use it.
                       properties:
