--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -160,6 +160,9 @@ spec:
                           disableCsiDriver:
                             description: 'Optional: DisableCSIDriver disables the installation of CSI driver on every clusters within the DC If true it can''t be over-written in the cluster configuration'
                             type: boolean
+                          edge:
+                            description: Edge contains settings for clusters using manually created nodes in edge envs.
+                            type: object
                           enforceAuditLogging:
                             description: 'Optional: EnforceAuditLogging enforces audit logging on every cluster within the DC, ignoring cluster-specific settings.'
                             type: boolean
