--- a/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationdefinitions.yaml
+++ b/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationdefinitions.yaml
@@ -60,10 +60,16 @@ spec:
                 description:
                   description: Description of the application. what is its purpose
                   type: string
+                documentationURL:
+                  description: DocumentationURL holds a link to official documentation of the Application Alternatively this can be a link to the Readme of a chart in a git repository
+                  type: string
                 method:
                   description: Method used to install the application
                   enum:
                     - helm
+                  type: string
+                sourceURL:
+                  description: SourceURL holds a link to the official source code mirror or git repository of the application
                   type: string
                 versions:
                   description: Available version for this application
