--- a/addons/csi/vmware-cloud-director/csi-controller.yaml
+++ b/addons/csi/vmware-cloud-director/csi-controller.yaml
@@ -19,14 +19,10 @@
 # - image source includes registry templating
 # - add a securityContext
 # - remove affinity
+# - use `kubermatic:vcloud-csi` user instead of service account
+# - remove deployment for CSI controller; it has been moved from user cluster to seed cluster
 
 {{ if eq .Cluster.CloudProviderName "vmwareclouddirector" }}
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: csi-vcd-controller-sa
-  namespace: kube-system
 
 ---
 # external attacher
@@ -57,8 +53,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: csi-attacher-binding
 subjects:
-  - kind: ServiceAccount
-    name: csi-vcd-controller-sa
+  - kind: User
+    name: kubermatic:vcloud-csi
     namespace: kube-system
 roleRef:
   kind: ClusterRole
@@ -103,120 +99,12 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: csi-provisioner-binding
 subjects:
-  - kind: ServiceAccount
-    name: csi-vcd-controller-sa
+  - kind: User
+    name: kubermatic:vcloud-csi
     namespace: kube-system
 roleRef:
   kind: ClusterRole
   name: csi-provisioner-role
   apiGroup: rbac.authorization.k8s.io
-
----
-kind: Deployment
-apiVersion: apps/v1
-metadata:
-  name: csi-vcd-controllerplugin
-  namespace: kube-system
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: csi-vcd-controllerplugin
-  template:
-    metadata:
-      labels:
-        app: csi-vcd-controllerplugin
-    spec:
-      serviceAccount: csi-vcd-controller-sa
-      dnsPolicy: Default
-      securityContext:
-        seccompProfile:
-          type: RuntimeDefault
-      containers:
-        - name: csi-attacher
-          image: {{ Image "registry.k8s.io/sig-storage/csi-attacher:v3.2.1" }}
-          imagePullPolicy: IfNotPresent
-          args:
-            - --csi-address=$(ADDRESS)
-            - --timeout=180s
-            - --v=5
-          env:
-            - name: ADDRESS
-              value: unix:///var/lib/csi/sockets/pluginproxy/csi.sock
-          volumeMounts:
-            - name: socket-dir
-              mountPath: /var/lib/csi/sockets/pluginproxy/
-        - name: csi-provisioner
-          image: {{ Image "registry.k8s.io/sig-storage/csi-provisioner:v2.2.2" }}
-          imagePullPolicy: IfNotPresent
-          args:
-            - --csi-address=$(ADDRESS)
-            - --default-fstype=ext4
-            - --timeout=300s
-            - --v=5
-          env:
-            - name: ADDRESS
-              value: unix:///var/lib/csi/sockets/pluginproxy/csi.sock
-          volumeMounts:
-            - name: socket-dir
-              mountPath: /var/lib/csi/sockets/pluginproxy/
-        - name: vcd-csi-plugin
-          securityContext:
-            privileged: true
-            capabilities:
-              add: ["SYS_ADMIN"]
-            allowPrivilegeEscalation: true
-          image: {{ Image "projects.registry.vmware.com/vmware-cloud-director/cloud-director-named-disk-csi-driver:1.5.0" }}
-          imagePullPolicy: IfNotPresent
-          command:
-            - /opt/vcloud/bin/cloud-director-named-disk-csi-driver
-            - --cloud-config=/etc/kubernetes/vcloud/vcloud-csi-config.yaml
-            - --endpoint=$(CSI_ENDPOINT)
-            - --upgrade-rde
-            - --v=5
-          env:
-            - name: NODE_ID
-              valueFrom:
-                fieldRef:
-                  fieldPath: spec.nodeName
-            - name: CSI_ENDPOINT
-              value: unix:///var/lib/csi/sockets/pluginproxy/csi.sock
-          volumeMounts:
-            - name: socket-dir
-              mountPath: /var/lib/csi/sockets/pluginproxy/
-            - name: pods-probe-dir
-              mountPath: /dev
-              mountPropagation: HostToContainer
-            - name: pv-dir
-              mountPath: /var/lib/kubelet/plugins/kubernetes.io/csi
-              mountPropagation: "Bidirectional"
-            - name: vcloud-csi-config-volume
-              mountPath: /etc/kubernetes/vcloud
-            - name: vcloud-basic-auth-volume
-              mountPath: /etc/kubernetes/vcloud/basic-auth
-      tolerations:
-        - key: "CriticalAddonsOnly"
-          operator: "Exists"
-        - key: node-role.kubernetes.io/control-plane
-          effect: NoSchedule
-        - key: node-role.kubernetes.io/master
-          effect: NoSchedule
-      volumes:
-        - name: socket-dir
-          emptyDir: {}
-        - name: pods-probe-dir
-          hostPath:
-            path: /dev
-            type: Directory
-        - name: pv-dir
-          hostPath:
-            path: /var/lib/kubelet/plugins/kubernetes.io/csi
-            type: DirectoryOrCreate
-        - name: vcloud-csi-config-volume
-          configMap:
-            name: vcloud-csi-configmap
-        - name: vcloud-basic-auth-volume
-          secret:
-            secretName: vcloud-basic-auth
 
 {{ end }}
