--- a/charts/monitoring/kube-state-metrics/templates/cluster-role.yaml
+++ b/charts/monitoring/kube-state-metrics/templates/cluster-role.yaml
@@ -140,3 +140,12 @@ rules:
   verbs:
   - list
   - watch
+{{- if $.Values.kubeStateMetrics.customResourceState.enabled }}
+- apiGroups: ["apiextensions.k8s.io"]
+  resources:
+    - customresourcedefinitions
+  verbs: ["list", "watch"]
+{{- end }}
+{{ if $.Values.kubeStateMetrics.rbac.extraRules }}
+{{ toYaml $.Values.kubeStateMetrics.rbac.extraRules }}
+{{ end }}
