validate options for logoFormat
Signed-off-by: Simon Bein <simontheleg@gmail.com>

--- a/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationdefinitions.yaml
+++ b/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationdefinitions.yaml
@@ -68,6 +68,9 @@ spec:
                   type: string
                 logoFormat:
                   description: LogoFormat contains logo format of the configured Application. Options are "svg+xml" and "png"
+                  enum:
+                    - svg+xml
+                    - png
                   type: string
                 method:
                   description: Method used to install the application
