support edge cloud provider in osm CRs Signed-off-by: Moath Qasim <moad.qassem@gmail.com>
Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

--- a/pkg/controller/user-cluster-controller-manager/resources/resources/operating-system-manager/static/crd-operatingsystemconfig.yaml
+++ b/pkg/controller/user-cluster-controller-manager/resources/resources/operating-system-manager/static/crd-operatingsystemconfig.yaml
@@ -193,6 +193,7 @@ spec:
                     - aws
                     - azure
                     - digitalocean
+                    - edge
                     - gce
                     - hetzner
                     - kubevirt
