--- a/pkg/controller/user-cluster-controller-manager/resources/resources/operating-system-manager/static/crd-operatingsystemprofile.yaml
+++ b/pkg/controller/user-cluster-controller-manager/resources/resources/operating-system-manager/static/crd-operatingsystemprofile.yaml
@@ -482,6 +482,7 @@ spec:
                       - aws
                       - azure
                       - digitalocean
+                      - edge
                       - gce
                       - hetzner
                       - kubevirt
