--- a/pkg/crd/k8c.io/operatingsystemmanager.k8c.io_customoperatingsystemprofiles.yaml
+++ b/pkg/crd/k8c.io/operatingsystemmanager.k8c.io_customoperatingsystemprofiles.yaml
@@ -393,6 +393,7 @@ spec:
                           - aws
                           - azure
                           - digitalocean
+                          - edge
                           - gce
                           - hetzner
                           - kubevirt
